# for display continuity sake please use 2 spaces instead of tabs

2012-08-29 mmichaud <michael.michaud@free.fr>
  * Fix bug 3560828 by changing the dashed red line to a solid red line while
    moving an objetc.
  * NoderPlugIn : improve robustness of the workaround for the case where
    interiorPoint falls on the geometry boundary (JTS bug) 
  
2012-08-28 mmichaud <michael.michaud@free.fr>
  * Fix bug 3562375 (cancel project closing did not work any more)
  
2012-08-25 mmichaud <michael.michaud@free.fr>
  * Complete change in the Offset Curve algorithm which is now mainly based on
    JTS single-side buffer method.

2012-08-25 mmichaud <michael.michaud@free.fr>
  * Beanshell Tool now display a JTextArea with all the outputs from the script
    If the script ends with no exception, the output is transferred to InfoFrame
    when the dialog is closed.

2012-08-19 mmichaud <michael.michaud@free.fr>
  * fix 3 small bugs in sld export making them not compatible with GeoServer.

2012-08-15 mmichaud <michael.michaud@free.fr>
  * fix bugs 3530414 and 3536708 about JInternalFrame introduced with r2804.

2012-08-07 mmichaud <michael.michaud@free.fr>
  * Add an offsetCurve plugin based on JTS OffsetCurveBuilder but removing
    segments inside buffer
    
2012-08-10 ede
  * fixed flicker of left column in OpenWizard on resize  introduced by 
    persistent skinning changes

2012-08-07 mmichaud <michael.michaud@free.fr>
  * Fix a bug in AttributeTablePanel : pressing a key starts the cell editing 
    mode, but it did not clear the selection and kept delete feature action 
    possible, which was quite dangerous. Now, the selection is cleared. 

2012-07-13 mmichaud <michael.michaud@free.fr>
  * Small NPE fix in MergeSelectedPolygonsWithNeighbourPlugIn
  
2012-07-12 mmichaud <michael.michaud@free.fr>
  * Select and activate SelectFeaturesTool the first time OpenJUMP is opened
    Selection is made in OpenJUMPConfiguration and activation in JUMPWorkbench
