@@ -1,5 +1,10 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2012-09-02
+  * Fix bug 3564137 : pass Layerables to the LayerPrinter2 instead of Layers, so
+    that a view containing a single RasterImageLayer can export the view.
+    Remove check for java 1.4+ in SaveImageAsPlugIn
+
 2012-08-29 mmichaud <michael.michaud@free.fr>
   * Fix bug 3560828 by changing the dashed red line to a solid red line while
     moving an objetc.
